[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blindfold"
version = "0.1.0"
description = "Agent trust library with opaque credential handling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=43.0",
]
authors = [
    { name = "Zan" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/blindfold"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
